2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix the query in get_path_for_revision()
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not call get_path_for_revision() with CVS repos.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Ignore directories.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add more information in error messages.
	
2008-09-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add a profiler for get_path_for_revision()
	
2008-09-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Database.py:

	Save the old_path of a renamed or moved file in the actions table.

	* pycvsanaly2/utils.py:

	Add a funtion to figure out the path a given file for any revision.
	
	* pycvsanaly2/extensions/Metrics.py:

	Use the correct path for renamed or moved files.
	
2008-09-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/FileTypes.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add some missing cursor.close()
	
2008-08-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/FileTypes.py:

	Fix initial id when the table already exists.

	* pycvsanaly2/extensions/Metrics.py:

	Make Metrics extensions incremental.
	
2008-08-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use the FileTypes extension in Metrics in order to ignore the 
	revisions where there aren't code changes.
	
2008-08-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Ignore invalid topdirs.
	