@@ -2,6 +2,13 @@
 
 	* pycvsanaly2/utils.py:
 
+	Fix get_path_for_revision() when a path has been reanmed or moved
+	multiple times.
+	
+2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly2/utils.py:
+
 	Fix the query in get_path_for_revision()
 	
 2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
